# sahay

./: .gitignore  api.py  fetch_emails.py  list_models.py  llm_evoke.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Dashboard.jsx  index.css
frontend/src/lib/: api.js  supabase.js
